--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <input type="checkbox" class="active__completed">
                         <p class="active__completed-text">Complited</p>
                     </label>
+                    <button class="active__remove">Remove</button>
                 </div> -->
             </div>
         </div>
